<resources>

    <string name="app_name">Radioenlaces App</string>

    <string name="radio_link_view_tittle">Presupuesto de radio enlace</string>
    <string name="radio_link_transmission">Trasmision</string>
    <string name="radio_link_transmission_output_power">Potencia del Radio</string>
    <string name="radio_link_transmission_antenna_gain">Ganancia de la antena</string>
    <string name="radio_link_transmission_wire_loss">Perdida de cable</string>
    <string name="radio_link_transmission_datasheet">Datasheet</string>
    <string name="radio_link_transmission_manual">Manual</string>

    <string name="radio_link_propagation">Propagacion</string>
    <string name="radio_link_propagation_free_space_loss">Perdida espacio libre</string>

    <string name="radio_link_recepcion">Recepcion</string>
    <string name="radio_link_reception_antenna_gain">Ganancia de la antena</string>
    <string name="radio_link_reception_receiver">Sensibilidad receptor</string>
    <string name="radio_link_reception_wire_loss">Perdida de cable</string>
    <string name="radio_link_reception_datasheet">Datasheet</string>

    <string name="radio_link_calculate_buttton">Calcular</string>

    <string name="radio_link_datasheet">Datasheet</string>


    <string-array name="frequencies">
        <item>900MHz</item>
        <item>2400MHz</item>
        <item>5800MHz</item>
    </string-array>


    <string name="free_space_calculate_button">Calcular</string>
    <string name="free_space_distance_edit_text">DIstancia (Km)</string>
    <string name="free_space_tittle">Perdida en espacio libre</string>


    <string name="fresnel_zone_calculate_button">Calcular</string>
    <string name="fresnel_zone_first_distance_edit_text">Distancia trasmisor al obstaculo (Km)</string>
    <string name="fresnel_zone_second_distance_edit_text">Distancia receptor al obstaculo (Km)</string>
    <string name="fresnel_zone_total_distance_edit_text">DIstancia total (Km)</string>
    <string name="fresnel_zone_tittle">Cálculo de la zona Fresnel</string>


    <string name="tittlefslunderfifty">Excelente</string>
    <string name="underfiftydescription">La conexión es de alta calidad, con pocas obstrucciones, lo que permite una comunicación clara y rápida.</string>

    <string name="tittlefsluptofifty">Aceptable</string>
    <string name="fsluptofiftydescription"> La calidad es aceptable, pero puede haber obstrucciones que causen una conexión intermitente.</string>

    <string name="tittlefsluptohundred">Regular</string>
    <string name="uptohundreddescription">Hay mucha atenuación, probablemente por la distancia o varias obstrucciones.</string>


    <string name="tittle_link_budget_result">Presupuesto Calculado</string>
    <string name="link_budget_result_description">El enlace debería funcionar correctamente si los sitios están en una línea de visión clara.</string>

    <string name="tittlelinkbudgetuptohundred">Excelente</string>
    <string name="inkbudgetuptohundreddescription">Tienes un amplio margen de señal, asegurando una conexión estable y de alta calidad, capaz de manejar interferencias.</string>


    <string name="linkbudget_menu_tittle">Enlaces</string>
    <string name="free_space_menu_tittle">Espacio</string>
    <string name="fresnel_menu_tittle">Fresnel</string>
    <string name="recalculate_button">Recalcular</string>
    <string name="tittle_result">Tu Resultado</string>

    <string name="button_wire">Perdida de cable</string>

    <string name="Rocket_Dish_5G34_and_Rocket_Prism_5AC">Rocket Dish 5G34 + Rocket Prism 5AC GEN2</string>
    <string name="LiteBeam_5AC">LiteBeam 5AC</string>
    <string name="Rocket_Prism_5AC">Rocket Prism 5AC GEN2</string>
    <string name="PowerBeam_5AC">PowerBeam 5AC</string>
    <string name="text_calculate_here">Calcular aqui</string>
    <string name="rb_wire_5">UTP CAT5(0.08db/m)</string>
    <string name="rb_wire_5e">UTP CAT5e(0.07db/m)</string>
    <string name="rb_wire_6">UTP CAT6(0.06db/m)</string>
    <string name="rb_wire_6a">UTP CAT6a(0.05db/m)</string>
    <string name="dialog_button_text">Aceptar</string>
    <string name="rb_button_none_option">Ninguna</string>
    <string name="tv_formula_tittle">Formula Utilizada</string>


    <string name="fresnel_result_description">La altura maxima del obstaculo debe ser: </string>
    <string name="free_space_description">La pérdida en el espacio libre (FSL o FSPL) es la atenuación de la energía de radio que se produce cuando viaja por el aire entre dos antenas</string>

</resources>