<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_free_space_loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_space_tittle"
        style="@style/tv_tittle_link_budget_style"
        android:layout_marginVertical="20dp"/>

    <TextView
        android:id="@+id/tv_free_space_loss_description"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/free_space_description"
        android:textSize="15sp"
        android:layout_marginVertical="20dp"/>

    <ImageView
        android:id="@+id/img_free_space_loss"
        android:layout_width="200dp"
        android:contentDescription="@string/app_name"
        android:layout_height="200dp"
        android:src="@drawable/free_space_img"/>


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/primary_dark"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/distance_free_space"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/free_space_distance_edit_text"
                android:importantForAutofill="no"
                style="@style/edit_text_link_budget_style"
                android:maxLength="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Spinner
                android:id="@+id/spinner_frequency_free_space"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/distance_free_space" />

            <Button
                android:id="@+id/btn_free_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/btn_datasheet_link_budget_style"
                android:text="@string/free_space_calculate_button"
                app:layout_constraintTop_toBottomOf="@id/spinner_frequency_free_space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>