<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardBackgroundColor="@color/primary_dark"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:id="@+id/tvTrasmission"
                style="@style/tv_tittle_link_budget_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_link_transmission"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etOutputPower"
                style="@style/edit_text_link_budget_style"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:hint="@string/radio_link_transmission_output_power"
                android:importantForAutofill="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTrasmission"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etAntennaGain"
                style="@style/edit_text_link_budget_style"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:hint="@string/radio_link_transmission_antenna_gain"
                android:importantForAutofill="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etOutputPower" />

            <Button
                android:id="@+id/btn_wire_transmission"
                style="@style/btn_datasheet_link_budget_style"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/button_wire"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAntennaGain" />

            <RadioGroup
                android:id="@+id/rdTransmissionAntennas"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/etOutputPower"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rbTransmissionRDRP"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/Rocket_Dish_5G34_and_Rocket_Prism_5AC"
                    android:textSize="11sp" />

                <RadioButton
                    android:id="@+id/rbTransmissionLB"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/LiteBeam_5AC"
                    android:textSize="11sp" />

                <RadioButton
                    android:id="@+id/rbTransmissionPB"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/PowerBeam_5AC"
                    android:textSize="11sp" />

                <RadioButton
                    android:id="@+id/rbTransmissionNone"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="Ninguna"
                    android:textSize="11sp" />
            </RadioGroup>

            <Button
                android:id="@+id/btnDatasheet"
                style="@style/btn_datasheet_link_budget_style"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/radio_link_transmission_datasheet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/etOutputPower"
                app:layout_constraintTop_toBottomOf="@id/rdTransmissionAntennas" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/primary_dark"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tvPropagation"
                style="@style/tv_tittle_link_budget_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_link_propagation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etFreeSpaceLoss"
                style="@style/edit_text_link_budget_style"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/accent"
                android:hint="@string/radio_link_propagation_free_space_loss"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPropagation" />

            <TextView
                android:id="@+id/tvNavFreeSpace"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_calculate_here"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/accent"
                android:textSize="8sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etFreeSpaceLoss" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardBackgroundColor="@color/primary_dark"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:id="@+id/tvReception"
                style="@style/tv_tittle_link_budget_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_link_recepcion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etAntennaGainReception"
                style="@style/edit_text_link_budget_style"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:hint="@string/radio_link_reception_antenna_gain"
                android:importantForAutofill="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvReception"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etReceiverSensitivity"
                style="@style/edit_text_link_budget_style"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:hint="@string/radio_link_reception_receiver"
                android:importantForAutofill="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAntennaGainReception" />

            <Button
                android:id="@+id/btn_wire_reception"
                style="@style/btn_datasheet_link_budget_style"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/button_wire"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etReceiverSensitivity" />

            <RadioGroup
                android:id="@+id/rdReceptionAntennas"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/etAntennaGainReception"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rbReceptionRDRP"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/Rocket_Dish_5G34_and_Rocket_Prism_5AC"
                    android:textSize="11sp"/>

                <RadioButton
                    android:id="@+id/rbReceptionLB"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/LiteBeam_5AC"
                    android:textSize="11sp" />

                <RadioButton
                    android:id="@+id/rbReceptionPB"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/PowerBeam_5AC"
                    android:textSize="11sp"/>

                <RadioButton
                    android:id="@+id/rbReceptionNone"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="Ninguna"
                    android:textSize="11sp" />
            </RadioGroup>

            <Button
                android:id="@+id/btnDatasheetTwo"
                style="@style/btn_datasheet_link_budget_style"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:text="@string/radio_link_transmission_datasheet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/etReceiverSensitivity"
                app:layout_constraintTop_toBottomOf="@id/rdReceptionAntennas" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculateLinkBudget"
        style="@style/btn_datasheet_link_budget_style"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/radio_link_calculate_buttton" />

</LinearLayout>