<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:text="@string/fresnel_zone_tittle"
        style="@style/tv_tittle_link_budget_style"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/primary_dark"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">


            <ImageView
                android:id="@+id/img_fresnel_zone"
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:contentDescription="@string/fresnel_zone_tittle"
                android:src="@drawable/img_fresnel_zone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/first_distance_fresnel_zone"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/fresnel_zone_first_distance_edit_text"
                android:importantForAutofill="no"
                android:inputType="text"
                style="@style/edit_text_link_budget_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_fresnel_zone" />

            <Spinner
                android:id="@+id/spinner_frecuency_free_space"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_distance_fresnel_zone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnFresnelZoneCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btn_datasheet_link_budget_style"
        android:text="@string/fresnel_zone_calculate_button" />

</LinearLayout>